debugged & fixed grid alignment